# gfal

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  build-deb.sh  gfal-cli.spec  gfal.spec  init-gfal-voms-proxy.sh  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deployment-integration.yml  publish.yml  tests.yml
ci/: dcache-values.yaml  storm-values.yaml
docker/: Dockerfile.integration-runner  Dockerfile.xrootd-cern-test
docs/: docker-eospilot-integration.md  eos-token-workflow.md  eospilot-token-workflow.md  eospublic-examples.md  gfal2-library-integration-findings.md  index.md  installation.md  performance-investigation-findings.md  pyodide-poc.md  python-api.md  reference.md  storage-deployment-integration.md
docs/assets/: pyodide-gfal-poc.js
recipe/: meta.yaml
scripts/: benchmark-eospilot-small-files.sh  prepare-dcache-kind-deployment.sh  prepare-eos-kind-deployment.sh  prepare-storm-kind-deployment.sh  publish-next-patch-release.sh  update_badge_counts.py
src/gfal/: __init__.py  _version.py
src/gfal/cli/: base.py  commands.py  copy.py  ls.py  mount.py  progress.py  rm.py  shell.py  tape.py
src/gfal/core/: api.py  errors.py  fs.py  mount.py  tpc.py  webdav.py
src/gfal/tui/: __init__.py
src/gfal_cli/: __init__.py  api.py  base.py  commands.py  copy.py  errors.py  fs.py  ls.py  progress.py  rm.py  shell.py  tape.py  tpc.py  tui.py  utils.py  webdav.py
tests/: conftest.py  deployment_env.py  helpers.py  test_api_async.py  test_api_coverage.py  test_api_direct.py  test_base.py  test_base_extra.py  test_cat.py  test_cli.py  test_commands_direct.py  test_completion.py  test_copy_benchmark.py  test_coverage_copy_base_api.py  test_coverage_new.py  test_coverage_new2.py  test_coverage_progress_tpc.py  test_coverage_remaining.py  test_coverage_shell.py  test_cp.py  test_cp_direct.py  test_deployment_env.py  test_errors_direct.py  test_exit_codes.py  test_fs.py  test_fs_extra.py  test_integration_compare_gfal2.py  test_integration_eospilot.py  test_integration_eospublic.py  test_integration_mount.py  test_integration_storage_deployment.py  test_ipv.py  test_ls.py  test_ls_direct.py  test_mkdir.py  test_mount.py  test_packaging_metadata.py  test_pipe.py  test_progress.py  test_rename.py  (+31 more)
