[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gfal"
dynamic = ["version"]
description = "Grid File Access Library — Python rewrite of gfal2, based on fsspec (HTTP/HTTPS by default, optional XRootD client bindings)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [
    { name = "Luis Antonio Obis Aparicio", email = "luis.obis@cern.ch" },
]
dependencies = [
    "fsspec>=2023.1.0",
    "fsspec-xrootd>=0.5.4",
    "aiohttp>=3.8.0",
    "rich>=13.0.0",
    "rich-click>=1.7.0",
    "click>=8.0.0",
]

[project.scripts]
gfal = "gfal.cli.shell:main"

[project.optional-dependencies]
xrootd = [
    "xrootd>=5.7,<7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.8.0",
    "pytest-rerunfailures>=16.0.1",
    "pre-commit>=3.0",
    "codespell>=2.4.2",
    "certifi",
]
ssh = [
    "paramiko",
    "sshfs",
]
s3 = [
    "boto3",
    "s3fs",
]
mount = [
    "mfusepy>=3.1.1; platform_system == 'Linux' or platform_system == 'Darwin'",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/gfal"]

[tool.hatch.build.hooks.vcs]
version-file = "src/gfal/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n 4 --dist loadgroup"
markers = [
    "integration: tests that require network access to external services",
    "network: tests that make real network calls (retried automatically on failure)",
    "mount: tests that require FUSE mounting support",
    "xrootd: tests that require a local XRootD server (started automatically by the fixture)",
    "xdist_group(name): keep related tests on the same xdist worker",
    "sftp: tests that require a local SFTP server (started automatically by the fixture)",
    "s3: tests that require a local S3-compatible server (started automatically by the fixture)",
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py39"
exclude = ["src/gfal/_version.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "C4", # flake8-comprehensions
    "PTH", # use pathlib over os.path (advisory)
]
ignore = [
    "E501", # line too long – handled by the formatter
    "UP045", # use `X | None` for type annotations (wait: we need 3.9 support!)
]

[tool.ruff.lint.isort]
known-first-party = ["gfal"]

[tool.codespell]
skip = ".git,.venv,*.egg-info"
ignore-words-list = "cern,xrootd,fsspec,gfal,adler,aiohttp,thirdparty,scitag,moto,paramiko"
